--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "style-loader": "^0.13.0"
+  },
   "scripts": {
     "start": "node node_modules/.bin/webpack-dev-server --host=0.0.0.0 --content-base app",
     "test": "echo \"Error: no test specified\" && exit 1"
